--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <!-- ====== ABOUT SECTION (edit the text) ====== -->
       <h2>About Me</h2>
       <p>I am a student at Queen’s School of Computing. I’m interested in <!-- replace with interests -->.</p>
+      <!-- TODO: improve About text -->
 
       <!-- ====== PHOTO (upload me.jpg to repo root, then update the src below) ====== -->
       <img src="me.jpg" alt="Your Name portrait" width="240" height="240" />
